--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "APIs for shopping cart, to be consumed by mobile app",
   "main": "app.js",
   "scripts": {
-    "test": "mocha --timeout=50000"
+    "test": "mocha --timeout=50000",
+    "start": "node app.js"
   },
   "author": "Archit Rastogi",
   "license": "ISC",
